fixed bug where white space was showing on the right side of the purchase.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,9 @@ background: url(../images/nathan-dumlao-x7Lyx8Yyvug-unsplash.jpg);
 }
 
 /*---------------------------------pricing section---*/
+.purchase-container{
+
+}
 
 .pricing-bg{
  height: 100vh;
@@ -577,3 +580,4 @@ li:before {
 .buy-txt p{
     color:white;
 }
+
